Some media tests are crashing due to soft-linking failures https://bugs.webkit.org/show_bug.cgi?id=162698

Reviewed by Jer Noble.

We should be handling soft-linking failures for MRMediaRemoteSetNowPlayingVisibility gracefully. Guards these
calls with canLoad_MediaRemote_MRMediaRemoteSetParentApplication and also use the
SOFT_LINK_FUNCTION_MAY_FAIL_FOR_HEADER macro when soft linking.

* platform/audio/mac/MediaSessionManagerMac.mm:
(WebCore::MediaSessionManagerMac::updateNowPlayingInfo):
* platform/mac/MediaRemoteSoftLink.cpp:
* platform/mac/MediaRemoteSoftLink.h:


Canonical link: https://commits.webkit.org/180643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206551 268f45cc-cd09-0410-ab3c-d52691b4dbfc